--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <section class="section-main">
                     <div>
                         <h2>Novedades</h2>
-                        <h2>Version v2.repiolaa</h2>
+                        <h2>Version v2.repiolaa OP</h2>
 
                         <img src="imagenes/nutria-novedad.jpg" alt="imagen de nutria" width="200px" height="200px">
                     </div>
